# pangea-ring0-os

./: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  build.rs  flake.nix  linker.ld  linker.lds  qemu_output.txt  rust-toolchain.toml  scratch.rs  shell.nix
iso_root/: limine.conf  pangea-kernel
kernel/: Cargo.toml
kernel/src/: allocator.rs  apic.rs  cpu.rs  gdt.rs  interrupts.rs  main.rs  memory.rs  mpk.rs  pmm.rs  scheduler.rs  serial.rs  smp.rs  syscall.rs  writer.rs
kernel/src/.cargo/: .global-cache
kernel/src/.cargo/registry/cache/index.crates.io-1949cf8c6b5b557f/: bitflags-2.13.0.crate  font8x8-0.3.1.crate  limine-0.6.5.crate  pc-keyboard-0.7.0.crate  pic8259-0.10.4.crate  uart_16550-0.3.2.crate  volatile-0.4.6.crate  x86-0.52.0.crate  x86_64-0.14.13.crate
kernel/src/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/font8x8-0.3.1/: .cargo_vcs_info.json  Cargo.toml
kernel/src/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/limine-0.6.5/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
kernel/src/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/pc-keyboard-0.7.0/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  LICENSE-MIT  README.md
kernel/src/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/pic8259-0.10.4/: .cargo_vcs_info.json
kernel/src/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/uart_16550-0.3.2/: .cargo_vcs_info.json
kernel/src/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/x86_64-0.14.13/: .cargo_vcs_info.json
kernel/src/allocator/: mesh.rs
kernel/src/sip/: ash.rs  ipc.rs  mod.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs  timer.rs
src/: main.rs
(+40 files in other folders)
